--- a/win/makefile.vc
+++ b/win/makefile.vc
@@ -16,20 +16,34 @@
 #
 #------------------------------------------------------------------------------
 
+# The name of the package
 PROJECT = udp
 !include "rules-ext.vc"
 
+# Define the object files and resource file that make up the extension.
+# Note the resource file does not makes sense if doing a static library build
+# hence it is under that condition. TMP_DIR is the output directory
+# defined by rules for object files.
 PRJ_OBJS = $(TMP_DIR)\udp_tcl.obj
+
+# Define any additional project include flags
+PRJ_INCLUDES =
+
+# Define any additional compiler flags that might be required for the project
 PRJ_DEFINES     = -D_CRT_SECURE_NO_WARNINGS \
 		  -D_WINSOCK_DEPRECATED_NO_WARNINGS \
 		  -D_WIN32
+
+# Define any additional project needed libraries
 PRJ_LIBS	= ws2_32.lib
 
 PRJ_DOCS = $(OUT_DIR)\udp.html
 
+# Use standard rules
+!include "rules.vc"
 
 # Define the standard targets
-!include "$(_RULESDIR)\targets.vc"
+!include "targets.vc"
 
 # Project specific targets
 
@@ -51,8 +65,17 @@ set f [open $$name w]; puts -nonewline $$f $$d; close $$f
 
 # Cannot use default-install-docs because we generate docs on the fly
 doc:        setup $(PRJ_DOCS)
+ 
+all: default-target
+
+clean: default-clean
+
+realclean: default-hose
 
 pkgindex: default-pkgindex
+
 install: default-pkgindex-tea default-install doc default-install-demos
+
+# Test package
 test: default-test
 
